[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adr-toolkit"
version = "0.1.0"
description = "Zero-dependency CLI for managing Architecture Decision Records (ADRs) with Mermaid graph generation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Aslam Ahamed", email = "aslamahamed47@gmail.com" }
]
keywords = [
    "adr",
    "architecture-decision-record",
    "enterprise-architecture",
    "documentation",
    "mermaid",
    "madr",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/intruderfr/adr-toolkit"
Repository = "https://github.com/intruderfr/adr-toolkit"
Issues = "https://github.com/intruderfr/adr-toolkit/issues"

[project.scripts]
adr = "adr_toolkit.cli:main"

[tool.setuptools]
packages = ["adr_toolkit"]
